--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: BUNN Digital Docuentation
+title: BUNN Digital Documentation
 description: Description goes here!
