--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,7 +2,12 @@ title: BUNN Digital Documentation
 description: Description goes here!
 
 #theme: jekyll-theme-minimal
-remote_theme: pages-themes/hacker@v0.2.0
+#remote_theme: pages-themes/hacker@v0.2.0
 #remote_theme: pages-themes/cayman@v0.2.0
-plugins:
+#plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
+
+
+theme: just-the-docs
+aux_links:
+  Template Repository: https://github.com/just-the-docs/just-the-docs-template
