--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,13 +1,13 @@
 title: BUNN Digital Documentation
-description: Description goes here!
+description: Documentation for BUNN Digital APIs and services
+theme: just-the-docs
+aux_links:
+  Template Repository: https://github.com/just-the-docs/just-the-docs-template
 
 #theme: jekyll-theme-minimal
 #remote_theme: pages-themes/hacker@v0.2.0
 #remote_theme: pages-themes/cayman@v0.2.0
 #plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+#- jekyll-remote-theme # add this line to the plugins list if you already have one
 
 
-theme: just-the-docs
-aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
