--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 title: BUNN Digital Documentation
-description: Your guide to integrating with BUNN equipment and APIs
+description: Your guide to integrating with BUNN equipment and APIs!
 theme: just-the-docs
 
 url: https://just-the-docs.github.io
