--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -4,6 +4,8 @@ theme: just-the-docs
 
 url: https://just-the-docs.github.io
 
+logo: "/assets/images/bunn-logo-mark-light.svg"
+
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
 
