--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,21 +2,16 @@ title: BUNN Digital Documentation
 description: Your guide to integrating with BUNN equipment and APIs!
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://bunn-digital.github.io
 
 logo: "/assets/images/bunn-logo-mark-light.svg"
 
 # Aux links for the upper right navigation
 aux_links:
-  "BUNN Home":
-    - "https://www.bunn.com"
-  "BUNN Digital Resources":
-    - "https://bunn-digital.github.io/"
-    - "https://github.com/BUNN-Digital/Event-Consumer-Reference-Implementation-Java"
+  "BUNN Home": "https://www.bunn.com"
 
 # Makes Aux links open in a new tab. Default is false
 aux_links_new_tab: true
-
 
 
 # Enable or disable the site search
@@ -27,22 +22,28 @@ search:
   # Split pages into sections that can be searched individually
   # Supports 1 - 6, default: 2
   heading_level: 2
+
   # Maximum amount of previews per search result
   # Default: 3
   previews: 3
+
   # Maximum amount of words to display before a matched word in the preview
   # Default: 5
   preview_words_before: 5
+
   # Maximum amount of words to display after a matched word in the preview
   # Default: 10
   preview_words_after: 10
+
   # Set the search token separator
   # Default: /[\s\-/]+/
   # Example: enable support for hyphenated search words
   tokenizer_separator: /[\s/]+/
+
   # Display the relative url in search results
   # Supports true (default) or false
   rel_url: true
+
   # Enable or disable the search button that appears in the bottom right corner of every page
   # Supports true or false (default)
-  button: false
+  button: true
