--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,6 +13,7 @@ aux_links:
 # Makes Aux links open in a new tab. Default is false
 aux_links_new_tab: true
 
+color_scheme: bunn
 
 # Enable or disable the site search
 # Supports true (default) or false
