--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -19,6 +19,14 @@ aux_links_new_tab: true
 
 color_scheme: bunn
 
+callouts:
+  warning:
+    title: Warning
+    color: red
+  note:
+    title: Note
+    color: blue
+
 # Enable or disable the site search
 # Supports true (default) or false
 search_enabled: true
