--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -57,9 +57,10 @@ jobs:
 
       - name: Upload artifact
         # Automatically uploads an artifact from the './_site' directory by default
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-artifact@v3
         with:
           path: "docs/_site/"
+          name: site-artifact
 
   # Deployment job
   deploy:
