--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -3,5 +3,7 @@ source 'https://rubygems.org'
 gem "jekyll", "~> 4.3.2"
 gem "webrick", "~> 1.7"
 
-gem "just-the-docs", "0.5.3" # pinned to the current release
-# gem "just-the-docs"        # always download the latest release
+#gem "just-the-docs", "0.5.3" # pinned to the current release
+gem 'just-the-docs', '~> 0.10.0'
+#gem "just-the-docs"        # always download the latest release
+gem 'jekyll-sass-converter', '~> 3.1.0'
