--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -9,7 +9,6 @@ logo: "/assets/images/bunn-logo-horiz-light.svg"
 # Set a path/url to a favicon that will be displayed by the browser
 favicon_ico: "/assets/images/favicon.ico"
 
-
 # Aux links for the upper right navigation
 aux_links:
   "BUNN Home": "https://www.bunn.com"
@@ -60,3 +59,8 @@ search:
   # Enable or disable the search button that appears in the bottom right corner of every page
   # Supports true or false (default)
   button: true
+
+sass:
+  quiet_deps: true # https://github.com/just-the-docs/just-the-docs/issues/1541
+  silence_deprecations: ['import'] # https://github.com/just-the-docs/just-the-docs/issues/1607
+
